--- a/src/components/styles/Contact.scss
+++ b/src/components/styles/Contact.scss
@@ -29,7 +29,7 @@ a {
         padding: 20px;
         margin-block: .5rem;
         outline: none;
-        border: none;
+        border: 1px solid #ccc;
     }
 
     .message {
